[package]
name = "cargo-information"
version = "0.4.1"
edition = "2021"
license = "MIT"
description = "A cargo subcommand to show information about crates."
repository = "https://github.com/hi-rustin/cargo-information"
rust-version = "1.73"

[dependencies]
anstyle = "1.0.6"
anyhow = "1.0.80"
cargo = { version = "0.77.0" }
cargo-credential = { version = "0.4.2" }
cargo-util = "0.2.9"
clap = "4.5.1"
color-print = "0.3.5"
crates-io = "0.39.2"
pathdiff = "0.2.1"
semver = "1.0.21"


[dev-dependencies]
cargo-test-macro = { git = "https://github.com/rust-lang/cargo.git" }
cargo-test-support = { git = "https://github.com/rust-lang/cargo.git" }
snapbox = "0.5.1"
trycmd = "0.15.0"

[[bin]]
name = "cargo-info"

[features]
vendored-openssl = ["cargo/vendored-openssl"]
default = []
