[package]
name = "cargo-information"
version = "0.4.2"
edition = "2021"
license = "MIT"
description = "A cargo subcommand to show information about crates."
repository = "https://github.com/hi-rustin/cargo-information"
rust-version = "1.73"

[dependencies]
anstyle = "1.0.6"
anyhow = "1.0.81"
cargo = { version = "0.77.0" }
cargo-credential = { version = "0.4.2" }
cargo-util = "0.2.9"
clap = "4.5.2"
color-print = "0.3.5"
crates-io = "0.39.2"
pathdiff = "0.2.1"
semver = "1.0.22"


[dev-dependencies]
cargo-test-macro = { git = "https://github.com/rust-lang/cargo.git" }
cargo-test-support = { git = "https://github.com/rust-lang/cargo.git" }
snapbox = { version = "0.5.8", features = ["diff", "path", "term-svg"] }
trycmd = "0.15.0"

[[bin]]
name = "cargo-info"

[features]
vendored-openssl = ["cargo/vendored-openssl"]
default = []
