[package]
name = "cargo-information"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "A cargo subcommand to show information about crates."
repository = "https://github.com/hi-rustin/cargo-information"
rust-version = "1.73"

[dependencies]
anstyle = "1.0.6"
anyhow = "1.0.82"
cargo = { version = "0.79.0" }
cargo-credential = { version = "0.4.4" }
cargo-util-schemas = "0.3.0"
cargo-util = "0.2.10"
clap = "4.5.4"
color-print = "0.3.5"
crates-io = "0.40.0"
pathdiff = "0.2.1"
semver = "1.0.22"


[dev-dependencies]
cargo-test-macro = { git = "https://github.com/rust-lang/cargo.git" }
cargo-test-support = { git = "https://github.com/rust-lang/cargo.git" }
snapbox = { version = "0.5.14", features = ["diff", "path", "term-svg"] }
trycmd = "0.15.1"

[[bin]]
name = "cargo-info"

[features]
vendored-openssl = ["cargo/vendored-openssl"]
default = []
